# kanna

./: .bazelrc  .firebaserc  .gitignore  .kanna.toml  AGENTS.md  BUILD.bazel  CLAUDE.md  Cargo.delta-updater.toml  Cargo.desktop.toml  Cargo.server.toml  Cargo.toml  MODULE.bazel  PRD.md  README.md  VERSION  firebase.json  firestore.rules  kd  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/desktop/: BUILD.bazel  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/src/: App.test.ts  App.vue  PtyTest.vue  appError.ts  appUpdateFullBundleE2e.test.ts  devScript.test.ts  dialog.ts  e2eAppMetrics.ts  e2eTerminalBuffers.ts  emit.ts  env.d.ts  invoke.test.ts  invoke.ts  listen.ts  logForwarding.test.ts  logForwarding.ts  main.ts  previewMode.test.ts  previewMode.ts  ship.test.ts  sidecars.test.ts  tauri-mock.ts  updater.test.ts  viteConfig.test.ts  windowWorkspace.test.ts  windowWorkspace.ts
apps/desktop/src-tauri/: BUILD.bazel  Cargo.toml  Info.plist  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  subprocess_env.rs  transfer_identity.rs  transfer_sidecar.rs
apps/desktop/src/components/: ActionBar.vue  AddRepoModal.vue  AgentView.vue  AnalyticsModal.vue  AppUpdatePrompt.vue  BaseBranchDropdownPreview.vue  BlockerSelectModal.vue  CommandPaletteModal.vue  CommitGraphModal.vue  CommitGraphView.vue  DiffModal.vue  DiffView.vue  FilePickerModal.vue  FilePreviewModal.vue  ImportRepoModal.vue  IncomingTransferModal.vue  KeyboardShortcutsModal.vue  MainPanel.vue  MobileAccessPanel.vue  NewTaskModal.vue  PeerPickerModal.vue  PreferencesPanel.vue  ShellModal.vue  Sidebar.vue  TaskHeader.vue  TerminalTabs.vue  TerminalView.vue  ToastContainer.vue  TreeExplorerModal.vue
apps/desktop/src/composables/: daemonReadyState.ts  sessionRecoveryState.test.ts  sessionRecoveryState.ts  terminalMediaBridge.test.ts  terminalMediaBridge.ts  terminalSessionRecovery.test.ts  terminalSessionRecovery.ts  terminalSpawnOptions.test.ts  terminalSpawnOptions.ts  terminalStateCache.test.ts  terminalStateCache.ts  terminalVisibility.test.ts  terminalVisibility.ts  test-setup.ts  useAnalytics.ts  useAppUpdate.tauriResource.test.ts  useAppUpdate.test.ts  useAppUpdate.ts  useBackup.test.ts  useBackup.ts  useClaudeUsage.ts  useCustomTasks.test.ts  useCustomTasks.ts  useGc.ts  useInlineSearch.test.ts  useInlineSearch.ts  useKeyboardShortcuts.test.ts  useKeyboardShortcuts.ts  useMarkAsRead.test.ts  useNavigationHistory.test.ts  useNavigationHistory.ts  usePRWorkflow.ts  usePipeline.ts  usePreferences.ts  useResourceSweeper.ts  useShortcutContext.test.ts  useShortcutContext.ts  useTerminal.test.ts  useTerminal.ts  useToast.ts  (+1 more)
apps/desktop/src/perf/: taskSwitchPerf.test.ts  taskSwitchPerf.ts
apps/desktop/src/stores/: agent-permissions.test.ts  agent-permissions.ts  agent-provider.test.ts  agent-provider.ts  daemonInput.ts  db.test.ts  db.ts  e2eRealAgentOverride.test.ts  e2eRealAgentOverride.ts  init.test.ts  init.ts  kanna.querySnapshot.test.ts  kanna.runtimeStatusSync.test.ts  kanna.taskBaseBranch.test.ts  kanna.test.ts  kanna.ts  kannaCleanup.test.ts  kannaCleanup.ts  kannaCliEnv.test.ts  kannaCliEnv.ts  kannaConfig.test.ts  kannaTransfer.test.ts  pipeline.ts  portAllocationLog.test.ts  portAllocationLog.ts  ports.ts  queries.ts  selection.test.ts  selection.ts  sessions.ts  state.ts  taskBaseBranch.test.ts  taskBaseBranch.ts  taskCloseBehavior.test.ts  taskCloseBehavior.ts  taskCloseSelection.test.ts  taskCloseSelection.ts  taskCreationPlaceholder.test.ts  taskCreationPlaceholder.ts  taskRuntimeStatus.test.ts  (+11 more)
apps/desktop/src/utils/: baseBranchPicker.test.ts  baseBranchPicker.ts  commitGraph.ts  diffSearch.test.ts  diffSearch.ts  lifecycleCommands.ts  normalizeGitPatch.ts  parseRepoInput.test.ts  parseRepoInput.ts  reposHome.test.ts  reposHome.ts  selectTaskByActivity.test.ts  selectTaskByActivity.ts  shellCwd.test.ts  shellCwd.ts  syntaxLanguage.test.ts  syntaxLanguage.ts  taskBootstrap.test.ts  taskBootstrap.ts  taskSearch.test.ts  taskSearch.ts  taskTransfer.test.ts  taskTransfer.ts  textInput.ts
apps/desktop/tests/e2e/: bunfig.toml  preload.ts  realSuiteNaming.test.ts  run.ts  runConfig.ts  (+5 more)
crates/claude-agent-sdk/: BUILD.bazel
crates/claude-agent-sdk/src/: lib.rs  session.rs
crates/claude-agent-sdk/tests/: integration.rs
crates/daemon/: BENCHMARKS.md  BUILD.bazel  Cargo.toml  DESIGN.md  SPEC.md  build.rs
crates/daemon/benches/: headless_terminal_status.rs  session_manager.rs  sidecar_status.rs
crates/daemon/src/: fd_transfer.rs  headless_terminal.rs  lib.rs  main.rs  protocol.rs  pty.rs  recovery.rs  session.rs  sidecar.rs  socket.rs  status.rs  subprocess_env.rs
crates/daemon/tests/: handoff.rs  reconnect.rs  recovery_service.rs  status_scanner.rs
crates/kanna-cli/: BUILD.bazel  Cargo.toml
crates/kanna-cli/src/: main.rs
crates/kanna-server/: BUILD.bazel  Cargo.toml
crates/kanna-server/src/: cloud_client.rs  commands.rs  config.rs  db.rs  desktop_identity.rs  http_api.rs  main.rs  mobile_api.rs  pairing.rs  register.rs  relay_client.rs  task_creator.rs
crates/task-transfer/: BUILD.bazel  Cargo.toml
crates/task-transfer/src/: crypto.rs  discovery.rs  lib.rs  main.rs  peer_store.rs  protocol.rs  registry.rs  runtime.rs
crates/task-transfer/tests/: crypto.rs  discovery.rs  peer_store.rs  protocol.rs  registry.rs  runtime.rs
crates/tauri-plugin-delta-updater/: BUILD.bazel
tools/bazel/: BUILD.bazel  build_cargo_binary.py  build_frontend_dist.py  build_frontend_dist_test.py  build_macos_dmg.py  build_macos_dmg_test.py  build_macos_notarized_dmg.py  build_macos_signed_app.py  build_macos_signed_app_test.py  build_macos_signed_file.py  defs.bzl  extensions.bzl  ghostty-libvt-fast-path.patch  ghostty-simdutf-include.patch  libghostty-vt-sys-zig-env.patch  make_tauri_manifest.py  normalize_tauri_context.py  normalize_tauri_context_test.py  openssl-src-bazel-runfiles.patch
tools/bazel/desktop-workspace/: BUILD.bazel  Cargo.toml
(+559 files in other folders)
