[workspace]
members = [
    "apps/desktop/src-tauri",
    "crates/claude-agent-sdk",
    "crates/daemon",
    "crates/kanna-cli",
    "crates/kanna-server",
    "crates/tauri-plugin-delta-updater",
    "packages/terminal-recovery",
]
resolver = "2"

[patch."https://github.com/jemdiggity/libghostty-rs.git"]
libghostty-vt = { path = "vendor/libghostty-rs/crates/libghostty-vt" }
libghostty-vt-sys = { path = "vendor/libghostty-rs/crates/libghostty-vt-sys" }
