module(
    name = "kanna_local",
    version = "0.0.0",
)

git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

bazel_dep(name = "rules_tauri", version = "0.0.0")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "rules_rust", version = "0.69.0")
bazel_dep(name = "rules_zig", version = "0.12.3")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "bazel_lib", version = "3.2.2")
bazel_dep(name = "aspect_rules_js", version = "3.0.3")
bazel_dep(name = "rules_nodejs", version = "6.7.3")

git_override(
    module_name = "rules_tauri",
    commit = "98b6ec85ada71eb16323b165e275eeada704e529",
    remote = "https://github.com/jemdiggity/rules_tauri.git",
)

git_repository(
    name = "kanna_ghostty_src",
    build_file_content = """
package(default_visibility = ["//visibility:public"])

exports_files([
    "build.zig",
    "build.zig.zon",
])

filegroup(
    name = "srcs",
    srcs = glob(
        ["**"],
        exclude = [
            "BUILD",
            "BUILD.bazel",
            "WORKSPACE",
            "WORKSPACE.bazel",
        ],
    ),
)
""",
    commit = "665a03f380204ce1976941d36649963b4da80880",
    patch_args = ["-p1"],
    patches = [
        "//tools/bazel:ghostty-libvt-fast-path.patch",
        "//tools/bazel:ghostty-simdutf-include.patch",
    ],
    remote = "https://github.com/jemdiggity/ghostty.git",
)

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    extra_target_triples = ["x86_64-apple-darwin"],
    versions = ["1.93.1"],
)
use_repo(
    rust,
    "rust_macos_aarch64__x86_64-apple-darwin__stable_tools",
    "rust_toolchains",
)

register_toolchains("@rust_toolchains//:all")

rust_host_tools = use_extension("@rules_rust//rust:extensions.bzl", "rust_host_tools")
rust_host_tools.host_tools(
    name = "kanna_rust_host_tools",
    version = "1.93.1",
)
use_repo(rust_host_tools, "kanna_rust_host_tools")

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.from_cargo(
    name = "kanna_cli_crates",
    cargo_lockfile = "//crates/kanna-cli:Cargo.lock",
    manifests = ["//crates/kanna-cli:Cargo.toml"],
    supported_platform_triples = [
        "aarch64-apple-darwin",
        "x86_64-apple-darwin",
    ],
)
crate.from_cargo(
    name = "daemon_crates",
    cargo_lockfile = "//crates/daemon:Cargo.lock",
    manifests = ["//crates/daemon:Cargo.toml"],
    supported_platform_triples = [
        "aarch64-apple-darwin",
        "x86_64-apple-darwin",
    ],
)
crate.from_cargo(
    name = "kanna_server_crates",
    cargo_lockfile = "//crates/kanna-server:Cargo.lock",
    manifests = ["//:Cargo.server.toml"],
    supported_platform_triples = [
        "aarch64-apple-darwin",
        "x86_64-apple-darwin",
    ],
)
crate.from_cargo(
    name = "task_transfer_crates",
    cargo_lockfile = "//crates/task-transfer:Cargo.lock",
    manifests = ["//crates/task-transfer:Cargo.toml"],
    supported_platform_triples = [
        "aarch64-apple-darwin",
        "x86_64-apple-darwin",
    ],
)
crate.from_cargo(
    name = "terminal_recovery_crates",
    cargo_lockfile = "//packages/terminal-recovery:Cargo.lock",
    manifests = ["//packages/terminal-recovery:Cargo.toml"],
    supported_platform_triples = [
        "aarch64-apple-darwin",
        "x86_64-apple-darwin",
    ],
)
crate.from_cargo(
    name = "desktop_crates",
    cargo_lockfile = "//:Cargo.desktop.lock",
    manifests = ["//:Cargo.desktop.toml"],
    supported_platform_triples = [
        "aarch64-apple-darwin",
        "x86_64-apple-darwin",
    ],
)
crate.from_cargo(
    name = "delta_updater_crates",
    cargo_lockfile = "//:Cargo.delta-updater.lock",
    manifests = ["//:Cargo.delta-updater.toml"],
    supported_platform_triples = [
        "aarch64-apple-darwin",
        "x86_64-apple-darwin",
    ],
)
crate.annotation(
    build_script_env = {
        "GHOSTTY_SOURCE_DIR": "$${pwd}/external/+git_repository+kanna_ghostty_src",
        "HOME": "$${OUT_DIR}/home",
        "XDG_CACHE_HOME": "$${OUT_DIR}/xdg-cache",
        "ZIG": "$${pwd}/$(ZIG_BIN)",
        "ZIG_GLOBAL_CACHE_DIR": "$${OUT_DIR}/zig-cache/global",
        "ZIG_LOCAL_CACHE_DIR": "$${OUT_DIR}/zig-cache/local",
    },
    build_script_toolchains = ["@rules_zig//zig:resolved_toolchain"],
    crate = "libghostty-vt-sys",
    gen_build_script = "on",
    patch_args = ["-p1"],
    patches = ["//tools/bazel:libghostty-vt-sys-zig-env.patch"],
    repositories = [
        "daemon_crates",
        "kanna_server_crates",
        "terminal_recovery_crates",
    ],
    build_script_data = [
        "@@+git_repository+kanna_ghostty_src//:build.zig",
        "@@+git_repository+kanna_ghostty_src//:build.zig.zon",
        "@@+git_repository+kanna_ghostty_src//:srcs",
    ],
)
crate.annotation(
    crate = "openssl-src",
    data_glob = ["openssl/**"],
    patch_args = ["-p1"],
    patches = ["//tools/bazel:openssl-src-bazel-runfiles.patch"],
    repositories = ["desktop_crates"],
)
crate.annotation(
    crate = "tauri-utils",
    patch_args = ["-p1"],
    patches = [
        "//tools/bazel:tauri-utils-bazel-permission-paths.patch",
        "//tools/bazel:tauri-utils-bazel-debug-assertions.patch",
    ],
    repositories = ["desktop_crates"],
)
use_repo(crate, "kanna_cli_crates")
use_repo(
    crate,
    "daemon_crates",
    "delta_updater_crates",
    "desktop_crates",
    "desktop_crates__tauri-2.10.3",
    "desktop_crates__tauri-plugin-dialog-2.7.0",
    "desktop_crates__tauri-plugin-opener-2.5.3",
    "desktop_crates__tauri-plugin-process-2.3.1",
    "desktop_crates__tauri-plugin-shell-2.3.5",
    "desktop_crates__tauri-plugin-sql-2.4.0",
    "desktop_crates__tauri-plugin-updater-2.10.1",
    "desktop_crates__tauri-plugin-webdriver-0.2.1",
    "kanna_server_crates",
    "task_transfer_crates",
    "terminal_recovery_crates",
)

zig = use_extension("@rules_zig//zig:extensions.bzl", "zig")
zig.toolchain(
    default = True,
    zig_version = "0.15.2",
)
use_repo(zig, "zig_toolchains")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(node_version = "24.13.0")
use_repo(node, "nodejs_toolchains")

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")
use_repo(pnpm, "pnpm")

pnpm.pnpm(pnpm_version = "10.29.3")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "kanna_npm",
    npmrc = "//apps/desktop:.npmrc",
    pnpm_lock = "//:pnpm-lock.yaml",
)
use_repo(npm, "kanna_npm")
