load("@desktop_crates//:defs.bzl", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library")

package(default_visibility = ["//visibility:public"])

exports_files([
    "Cargo.lock",
    "Cargo.toml",
])

filegroup(
    name = "cargo_srcs",
    srcs = [
        "Cargo.lock",
        "Cargo.toml",
    ] + glob([
        "src/**/*.rs",
        "tests/**/*.rs",
    ]),
)

rust_library(
    name = "claude_agent_sdk",
    srcs = glob(["src/**/*.rs"]),
    crate_root = "src/lib.rs",
    crate_name = "claude_agent_sdk",
    edition = "2021",
    deps = all_crate_deps(
        normal = True,
        package_name = "crates/claude-agent-sdk",
    ),
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
        package_name = "crates/claude-agent-sdk",
    ),
)
