load("@daemon_crates//:defs.bzl", "all_crate_deps")
load("@kanna_server_crates//:defs.bzl", all_crate_deps_for_server = "all_crate_deps")
load("@rules_rust//cargo:defs.bzl", "cargo_build_script")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "cargo_srcs",
    srcs = [
        "Cargo.lock",
        "Cargo.toml",
        "build.rs",
    ] + glob(["src/**/*.rs"]),
)

cargo_build_script(
    name = "daemon_build_script",
    srcs = ["build.rs"],
    crate_root = "build.rs",
    edition = "2021",
    data = ["//:VERSION"],
)

rust_library(
    name = "kanna_daemon_lib",
    srcs = glob(["src/**/*.rs"], exclude = ["src/main.rs"]),
    crate_root = "src/lib.rs",
    crate_name = "kanna_daemon",
    edition = "2021",
    deps = all_crate_deps(normal = True),
    proc_macro_deps = all_crate_deps(proc_macro = True),
)

rust_library(
    name = "kanna_daemon_lib_for_server",
    srcs = glob(["src/**/*.rs"], exclude = ["src/main.rs"]),
    crate_root = "src/lib.rs",
    crate_name = "kanna_daemon",
    edition = "2021",
    deps = all_crate_deps_for_server(normal = True, package_name = "crates/daemon"),
    proc_macro_deps = all_crate_deps_for_server(proc_macro = True, package_name = "crates/daemon"),
)

rust_binary(
    name = "kanna_daemon",
    srcs = glob(["src/**/*.rs"], exclude = ["src/lib.rs"]),
    crate_root = "src/main.rs",
    crate_name = "kanna_daemon",
    edition = "2021",
    deps = all_crate_deps(normal = True) + [
        ":daemon_build_script",
        ":kanna_daemon_lib",
    ],
    proc_macro_deps = all_crate_deps(proc_macro = True),
)

rust_binary(
    name = "kanna_daemon_x86_64",
    srcs = glob(["src/**/*.rs"], exclude = ["src/lib.rs"]),
    crate_root = "src/main.rs",
    crate_name = "kanna_daemon",
    edition = "2021",
    deps = all_crate_deps(normal = True) + [
        ":daemon_build_script",
        ":kanna_daemon_lib",
    ],
    proc_macro_deps = all_crate_deps(proc_macro = True),
    platform = "//tools/bazel:macos_x86_64",
)
