[package]
name = "kanna-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
log = "0.4"
flexi_logger = "0.31"
futures = "0.3"
libghostty-vt = { git = "https://github.com/jemdiggity/libghostty-rs.git", rev = "61ae57d7b42821e1b19ad325abc7ff49c80fc880", package = "libghostty-vt" }
ghostty-xterm-compat-serialize = { git = "https://github.com/jemdiggity/ghostty-xterm-compat-serialize.git", rev = "135f988f408de703d5c4f6ae45de6902f3403f7c" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "headless_terminal_status"
harness = false

[[bench]]
name = "session_manager"
harness = false
