load("@kanna_server_crates//:defs.bzl", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_binary")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "cargo_srcs",
    srcs = [
        "Cargo.lock",
        "Cargo.toml",
    ] + glob(["src/**/*.rs"]),
)

rust_binary(
    name = "kanna_server",
    srcs = glob(["src/**/*.rs"]),
    crate_root = "src/main.rs",
    crate_name = "kanna_server",
    edition = "2021",
    deps = all_crate_deps(normal = True) + [
        "//crates/daemon:kanna_daemon_lib",
    ],
    proc_macro_deps = all_crate_deps(proc_macro = True),
)

rust_binary(
    name = "kanna_server_x86_64",
    srcs = glob(["src/**/*.rs"]),
    crate_root = "src/main.rs",
    crate_name = "kanna_server",
    edition = "2021",
    deps = all_crate_deps(normal = True) + [
        "//crates/daemon:kanna_daemon_lib",
    ],
    proc_macro_deps = all_crate_deps(proc_macro = True),
    platform = "//tools/bazel:macos_x86_64",
)
