load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library")
load("@task_transfer_crates//:defs.bzl", "all_crate_deps")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "cargo_srcs",
    srcs = [
        "Cargo.lock",
        "Cargo.toml",
    ] + glob(["src/**/*.rs", "tests/**/*.rs"]),
)

rust_library(
    name = "kanna_task_transfer_lib",
    srcs = glob(["src/**/*.rs"], exclude = ["src/main.rs"]),
    crate_root = "src/lib.rs",
    crate_name = "kanna_task_transfer",
    edition = "2021",
    deps = all_crate_deps(normal = True),
    proc_macro_deps = all_crate_deps(proc_macro = True),
)

rust_binary(
    name = "kanna_task_transfer",
    srcs = glob(["src/**/*.rs"], exclude = ["src/lib.rs"]),
    crate_root = "src/main.rs",
    crate_name = "kanna_task_transfer",
    edition = "2021",
    deps = all_crate_deps(normal = True) + [
        ":kanna_task_transfer_lib",
    ],
    proc_macro_deps = all_crate_deps(proc_macro = True),
)

rust_binary(
    name = "kanna_task_transfer_x86_64",
    srcs = glob(["src/**/*.rs"], exclude = ["src/lib.rs"]),
    crate_root = "src/main.rs",
    crate_name = "kanna_task_transfer",
    edition = "2021",
    deps = all_crate_deps(normal = True) + [
        ":kanna_task_transfer_lib",
    ],
    proc_macro_deps = all_crate_deps(proc_macro = True),
    platform = "//tools/bazel:macos_x86_64",
)
