[package]
name = "kanna-task-transfer"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
chacha20poly1305 = "0.10"
chrono = { version = "0.4", features = ["clock"] }
hkdf = "0.12"
mdns-sd = "0.19"
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }

[dev-dependencies]
tempfile = "3"
