package(default_visibility = ["//visibility:public"])

platform(
    name = "macos_x86_64",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:osx",
    ],
)

exports_files([
    "build_frontend_dist.py",
    "build_macos_dmg.py",
    "build_macos_notarized_dmg.py",
    "build_macos_signed_app.py",
    "build_macos_signed_file.py",
    "defs.bzl",
    "extensions.bzl",
    "libghostty-vt-sys-zig-env.patch",
    "openssl-src-bazel-runfiles.patch",
    "tauri-utils-bazel-debug-assertions.patch",
    "tauri-utils-bazel-permission-paths.patch",
])
