load("@desktop_crates//:defs.bzl", "all_crate_deps")
load("@rules_rust//cargo:defs.bzl", "cargo_build_script")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library")

package(default_visibility = ["//visibility:public"])

exports_files([
    "Cargo.lock",
    "Cargo.toml",
    "Info.plist",
    "build.rs",
    "tauri.conf.json",
])

filegroup(
    name = "cargo_srcs",
    srcs = [
        "Cargo.lock",
        "Cargo.toml",
        "Info.plist",
        "build.rs",
        "tauri.conf.json",
    ] + glob([
        "capabilities/**",
        "icons/**",
        "src/**/*.rs",
    ]),
)

filegroup(
    name = "icons",
    srcs = glob(["icons/**"]),
)

filegroup(
    name = "capabilities",
    srcs = glob(["capabilities/**"]),
)

filegroup(
    name = "tauri_build_data",
    srcs = [
        "Info.plist",
        "tauri.conf.json",
        "//apps/desktop:dist",
        ":capabilities",
        ":icons",
    ],
)

cargo_build_script(
    name = "desktop_build_script",
    srcs = ["build.rs"],
    crate_root = "build.rs",
    edition = "2021",
    rundir = "apps/desktop/src-tauri",
    version = "0.0.32",
    deps = all_crate_deps(
        build = True,
        package_name = "apps/desktop/src-tauri",
    ),
    link_deps = [
        "@desktop_crates//:tauri",
        "@desktop_crates//:tauri-plugin-dialog",
        "@desktop_crates//:tauri-plugin-opener",
        "@desktop_crates//:tauri-plugin-shell",
        "@desktop_crates//:tauri-plugin-sql",
        "@desktop_crates//:tauri-plugin-webdriver",
    ],
    proc_macro_deps = all_crate_deps(
        build_proc_macro = True,
        package_name = "apps/desktop/src-tauri",
    ),
    data = [
        ":cargo_srcs",
        ":tauri_build_data",
    ],
    compile_data = [
        ":cargo_srcs",
        ":tauri_build_data",
    ],
    build_script_env = {
        "DEP_TAURI_DEV": "false",
        "KANNA_BUILD_BRANCH": "",
        "KANNA_BUILD_COMMIT": "",
        "KANNA_BUILD_WORKTREE": "",
        "TAURI_CONFIG": "{\"bundle\":{\"externalBin\":[],\"resources\":[]}}",
    },
)

rust_library(
    name = "kanna_desktop_lib",
    srcs = glob(["src/**/*.rs"], exclude = ["src/main.rs"]),
    crate_root = "src/lib.rs",
    crate_name = "kanna_desktop_lib",
    edition = "2021",
    deps = all_crate_deps(
        normal = True,
        package_name = "apps/desktop/src-tauri",
    ) + [
        ":desktop_build_script",
        "//crates/claude-agent-sdk:claude_agent_sdk",
        "//crates/tauri-plugin-delta-updater:tauri_plugin_delta_updater",
    ],
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
        package_name = "apps/desktop/src-tauri",
    ),
)

rust_binary(
    name = "kanna_desktop",
    srcs = glob(["src/**/*.rs"], exclude = ["src/lib.rs"]),
    crate_root = "src/main.rs",
    crate_name = "kanna_desktop",
    binary_name = "kanna-desktop",
    edition = "2021",
    deps = [
        ":desktop_build_script",
        ":kanna_desktop_lib",
    ],
)

rust_binary(
    name = "kanna_desktop_x86_64",
    srcs = glob(["src/**/*.rs"], exclude = ["src/lib.rs"]),
    crate_root = "src/main.rs",
    crate_name = "kanna_desktop",
    binary_name = "kanna-desktop",
    edition = "2021",
    deps = [
        ":desktop_build_script",
        ":kanna_desktop_lib",
    ],
    platform = "//tools/bazel:macos_x86_64",
)
